# mtg_card_dataminer

./: .env  .gitignore  Cargo.toml  cards copy.json  cards.json  flake.nix  justfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tmp.json
.config/nix/: .gitignore.nix  .npmrc.nix  Cargo.nix  env.nix  package.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
assets/: main.css
src/: card.rs  cards.rs  handlers.rs  main.rs  server.rs  templates.rs  util.rs
templates/: base.html  root.html
test_data/: cards.json  test.json
